--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ yarn-error.log
 .idea/workspace.xml
 /idea
 
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
