--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "landish/pagination": "^1.3",
         "laravel/framework": "^6.0",
