--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "landish/pagination": "^1.3",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravellegends/pt-br-validator": "6.*"
+        "laravellegends/pt-br-validator": "6.*",
+        "spatie/laravel-searchable": "^1.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
