--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,7 @@ npm-debug.log
 yarn-error.log
 .idea/vcs.xml
 .idea/workspace.xml
-/idea
+.idea/*
 
-<<<<<<< HEAD
-=======
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
->>>>>>> 91e44a4027958cf5fa06033d816b3cb93031dea8
 
 
