--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "landish/pagination": "^1.3",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravellegends/pt-br-validator": "6.*",
-        "spatie/laravel-searchable": "^1.6",
-      "ext-json": "*"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-searchable": "^1.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
